# airflow-dags-sgb

./: .gitignore  README.md  requirements.txt  setup.cfg
notebooks/: ExportGeoquimica.ipynb  ExportMineralometria.ipynb  ExportPintaOuro.ipynb  etl_contagem_au.ipynb  etl_geoquimica.ipynb  etl_mineralometria.ipynb
notebooks/oracle/: reflect_st_geometry_from_oracle.ipynb
sgb/common/airflow/hooks/: sde.py
sgb/common/sqlalchemy/: fields.py  functions.py
sgb/geobank/dags/: geobank-data.dag.py  oracle-test.py
sgb/geobank/utils/: extract.py
sgb/geobank/utils/sql/: export_wkb.sql  geometry_analyze.sql  identify_st_geometry_tables.sql
