# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = sgb
version = 0.1.0
author = Carlos Eduardo Mota
author_email = carlos.mota@sgb.gov.br

[options]
packages = find:
include_package_data = True
python_requires = >=3.10

[options.package_data]
* = *.sql

[options.packages.find]
exclude =
    dags*
    notebooks*